--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>de.whisperedshouts</groupId>
 			<artifactId>SAMLAuthSigner</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>sailpoint.library</groupId>
