--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.whisperedshouts</groupId>
 	<artifactId>saml-logout-plugin</artifactId>
 	<version>0.6.0-SNAPSHOT</version>
 	<name>saml-logout-plugin</name>
-	<properties>
-		<java.version>1.8</java.version>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>sailpoint.library</groupId>
@@ -72,12 +68,12 @@
 		<dependency>
 			<groupId>de.whisperedshouts</groupId>
 			<artifactId>saml-utilities</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>de.whisperedshouts</groupId>
 			<artifactId>keymanager-utilities</artifactId>
-			<version>1.0</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -106,15 +102,6 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<executions>
 					<execution>
@@ -137,4 +124,9 @@
 		<name>SailPoint Technologies</name>
 		<url>http://www.sailpoint.com</url>
 	</organization>
+	<parent>
+		<groupId>de.whisperedshouts</groupId>
+		<artifactId>global-settings</artifactId>
+		<version>1.0.5</version>
+	</parent>
 </project>
